almost done with the main-menu

--- a/index.html
+++ b/index.html
@@ -15,14 +15,43 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css" />
 	<link rel="stylesheet" type="text/css" href="css/top_nav.css" />
 	<link rel="stylesheet" type="text/css" href="css/lineup_listing.css" />
+	<link rel="stylesheet" type="text/css" href="css/main_menu.css" />
 
 	<!-- JS -->
 </head>
 <body>
 
 	<div id="container">
-		<!-- <div id="main-menu"></div> -->
-		<div id="content-wrapper">
+		<div id="main-menu">
+			<ul id="main-menu-list">
+				<li>
+					<a href="#"></a>
+					<span class="nav-color purple"></span>
+					<h4>Hungover</h4>
+				</li>
+				<li>
+					<a href="#"></a>
+					<span class="nav-color baby-blue"></span>
+					<h4>Feeling Intraspective</h4>
+				</li>
+				<li>
+					<a href="#"></a>
+					<span class="nav-color light-green"></span>
+					<h4>Sick At Home</h4>
+				</li>
+				<li>
+					<a href="#"></a>
+					<span class="nav-color yellow"></span>
+					<h4>Heads Need To Roll</h4>
+				</li>												
+				<li>
+					<a href="#"></a>
+					<span class="nav-color pink"></span>
+					<h4>Relaxing After Work</h4>
+				</li>																
+			</ul>
+		</div>
+		<div id="content-wrapper" class="nav-out">
 
 
 			<!-- NAV -->
