added in nav footer links

--- a/index.html
+++ b/index.html
@@ -50,6 +50,18 @@
 					<h4>Relaxing After Work</h4>
 				</li>																
 			</ul>
+			<ul id="main-menu-footer">
+				<li>
+					<a href="#"></a>
+					<span class="nav-footer profile"></span>
+					<h4>My Profile</h4>
+				</li>
+				<li>
+					<a href="#"></a>
+					<span class="nav-footer logout"></span>
+					<h4>Logout</h4>
+				</li>								
+			</ul>
 		</div>
 		<div id="content-wrapper" class="nav-out">
 
