finalized the pull out nav. started working on the lineup view interior

--- a/lineup.view.html
+++ b/lineup.view.html
@@ -22,7 +22,7 @@
 <body>
 
 	<div id="container">
-		<div id="main-menu">
+		<div id="main-menu" style="display: none;">
 			<ul id="main-menu-list">
 				<li>
 					<a href="#"></a>
@@ -63,17 +63,20 @@
 				</li>								
 			</ul>
 		</div>
-		<div id="content-wrapper" class="nav-out">
+		<div id="content-wrapper">
 
 
 			<!-- NAV -->
 			<div id="top_nav">
 				<ul>
 					<li id="left-most">
-						<a href="#" id="main_menu_trigger"></a>
+						<a href="#" id="main_menu_trigger" class="back"></a>
 						<h5>Latest Lineups</h5>
 					</li>
 					<li id="right-most">
+						<a href="#" class="share"></a>
+						<a href="#" class="watched on"></a>
+						<a href="#" class="fav on"></a>
 						<a href="#" id="six_logo"></a>
 					</li>
 				</ul>
@@ -84,52 +87,6 @@
 			<!-- DISPLAY AREA -->
 			<div id="display_wrapper">
 
-				<div class="lineup_listing_wrapper">
-
-					<!-- Listing Item Start -->
-					<div class="lineup_listing_item">
-
-						<a href="#" class="lli-link"></a>
-
-						<!-- Image -->
-						<div class="lli-img-wrapper" style="background-image: url(img/listing-bg.jpg);" ></div>
-
-						<!-- Content -->
-						<div class="lli-content-wrapper">
-							<div class="lli-content-inner">
-
-								<div class="lli-content-top">
-									<div class="lli-ct-inner">
-										<div class="author">
-											<div class="author-img" style="background-image: url(img/author-img.jpg); "></div>
-											<div class="author-name">
-												<span>Kyle Davis</span>
-												<small>created 3 days ago</small>
-											</div>
-										</div>
-										<div class="lli-icons">
-											<a class="lli-icon fav-icon off" href="#"></a>
-											<a class="lli-icon seen-icon off" href="#"></a>
-										</div>
-									</div>
-								</div>								
-
-								<div class="lli-content-bottom">
-									<h3>Computers are fun and interesting</h3>
-									<p>i love watching movies about the trials and tribulations of mountain climbers. i gotta tell you, i'm 100% sure i'd die on the way to mountain climb. (poor driver).</p>
-
-									<div class="lli-cb-footer">
-										1,400 <span class="small-seen-icon"></span> | 18 <span class="small-fav-icon" ></span>
-									</div>
-
-								</div>								
-							</div>
-						</div>
-
-					</div>
-					<!-- Listing Item End -->
-
-				</div>
 
 			</div>
 
