further progress on the lineups view cover

--- a/lineup.view.html
+++ b/lineup.view.html
@@ -15,6 +15,7 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css" />
 	<link rel="stylesheet" type="text/css" href="css/top_nav.css" />
 	<link rel="stylesheet" type="text/css" href="css/lineup_listing.css" />
+	<link rel="stylesheet" type="text/css" href="css/lineup_view.css" />
 	<link rel="stylesheet" type="text/css" href="css/main_menu.css" />
 
 	<!-- JS -->
@@ -74,7 +75,8 @@
 						<h5>Latest Lineups</h5>
 					</li>
 					<li id="right-most">
-						<a href="#" class="share"></a>
+						<a href="#" class="facebook"></a>
+						<a href="#" class="twitter"></a>
 						<a href="#" class="watched on"></a>
 						<a href="#" class="fav on"></a>
 						<a href="#" id="six_logo"></a>
@@ -87,6 +89,22 @@
 			<!-- DISPLAY AREA -->
 			<div id="display_wrapper">
 
+				<div class="lineup-outter">
+					<div class="lineup-inner">
+						<div class="lineup-page cover" style="background-image: url(img/text_lineup_cover.jpg);">
+							<div class="lineup-cover-sash">
+								<div class="lineup-title">
+									<h2>Computers are fun and interesting</h2>
+									<p>i love watching movies about the trials and tribulations of mountain climbers. i gotta tell you, i'm 100% sure i'd die on the way to mountain climb. (poor driver).</p>
+									<div class="likes">1,400 Views | 18 Likes</div>
+								</div>
+								<div class="sash-footer">
+
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
 
 			</div>
 
