finalized the lineup cover

--- a/lineup.view.html
+++ b/lineup.view.html
@@ -92,6 +92,9 @@
 				<div class="lineup-outter">
 					<div class="lineup-inner">
 						<div class="lineup-page cover" style="background-image: url(img/text_lineup_cover.jpg);">
+
+							<!-- SASH -->
+
 							<div class="lineup-cover-sash">
 								<div class="lineup-title">
 									<h2>Computers are fun and interesting</h2>
@@ -99,9 +102,25 @@
 									<div class="likes">1,400 Views | 18 Likes</div>
 								</div>
 								<div class="sash-footer">
-
+									<div class="author-container">
+										<img src="img/author_image.png">
+										<div class="author-name-container">
+											<span class="author-name">Kyle Davis</span>
+											<span class="created-at">crafted 3 days ago</span>
+										</div>
+									</div>
 								</div>
 							</div>
+
+							<!-- SWIPE FOOTER -->
+
+							<div class="swipe-sash">
+								<div class="swipe-inner">
+									<span class="swipe-hand"></span>SWIPE
+								</div>
+							</div>
+
+
 						</div>
 					</div>
 				</div>
