--- a/lineup.view.html
+++ b/lineup.view.html
@@ -19,6 +19,8 @@
 	<link rel="stylesheet" type="text/css" href="css/main_menu.css" />
 
 	<!-- JS -->
+	<script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
+	<script type="text/javascript" src="js/lineup.view.js"></script>
 </head>
 <body>
 
