added in the swipe library. fixed some css.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
 	<!-- JS -->
 	<script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
+	<script type="text/javascript" src="js/swipe.min.js"></script>
 	<script type="text/javascript" src="js/lineup.view.js"></script>
 	<script type="text/javascript" src="js/main_menu.js"></script>
 
@@ -95,7 +96,7 @@
 					<!-- Listing Item Start -->
 					<div class="lineup_listing_item">
 
-						<a href="#" class="lli-link"></a>
+						<a href="lineup.view.html" class="lli-link"></a>
 
 						<!-- Image -->
 						<div class="lli-img-wrapper" style="background-image: url(img/listing-bg.jpg);" ></div>
