completed v1 of the lineup interior pages

--- a/lineup.view.html
+++ b/lineup.view.html
@@ -12,6 +12,7 @@
 	<link href='http://fonts.googleapis.com/css?family=Fjalla+One' rel='stylesheet' type='text/css'>
 
 	<!-- CSS -->
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
 	<link rel="stylesheet" type="text/css" href="css/main.css" />
 	<link rel="stylesheet" type="text/css" href="css/top_nav.css" />
 	<link rel="stylesheet" type="text/css" href="css/lineup_listing.css" />
@@ -99,14 +100,14 @@
 						<!-- COVER PAGE -->
 						<div class="lineup-page cover" style="background-image: url(img/text_lineup_cover.jpg);">
 
-							<!-- SASH -->
+							<div class="lineup-cover-sash"><!-- SASH -->
 
-							<div class="lineup-cover-sash">
 								<div class="lineup-title">
 									<h2>Computers are fun and interesting</h2>
 									<p>i love watching movies about the trials and tribulations of mountain climbers. i gotta tell you, i'm 100% sure i'd die on the way to mountain climb. (poor driver).</p>
 									<div class="likes">1,400 Views | 18 Likes</div>
 								</div>
+
 								<div class="sash-footer">
 									<div class="author-container">
 										<img src="img/author_image.png">
@@ -116,11 +117,10 @@
 										</div>
 									</div>
 								</div>
+
 							</div>
 
-							<!-- SWIPE FOOTER -->
-
-							<div class="swipe-sash">
+							<div class="swipe-sash"><!-- SWIPE FOOTER -->
 								<div class="swipe-inner">
 									<span class="swipe-hand"></span>SWIPE
 								</div>
@@ -128,11 +128,62 @@
 
 						</div>
 						<!-- END COVER PAGE -->
-						<div class="lineup-page inner">
-							<h1>Page 2</h1>
+						<div class="lineup-page inner" style="background-image: url(img/text_lineup_cover.jpg);">
+
+							<div class="lineup-cover-sash"><!-- SASH -->
+
+								<div class="title-nav">
+									<h1>The DaVinci Code</h1>
+									<ul class="lineup-title-nav">
+										<li><a href="#" class="fav"></a></li>
+										<li><a href="#" class="watched"></a></li>
+										<li><a href="#" class="watchlist"></a></li>
+										<li><a href="#" class="share"></a></li>
+										<li><a href="#" class="trailer"></a></li>
+										<li><a href="#" class="watch"></a></li>
+									</ul>
+									<div class="clear"></div>
+								</div>
+
+								<div class="lineup-inner-details">
+									<div class="left">
+										<p>i love watching movies about the trials and tribulations of mountain climbers. i gotta tell you, i'm 100% sure i'd die on the way to mountain climb. (poor driver).i love watching movies about the trials and tribulations of mountain climbers. i gotta tell you, i'm 100% sure i'd die on the way to mountain climb. (poor driver).i love watching movies about the trials and tribulations of mountain climbers. i gotta tell you, i'm 100% sure i'd die on the way to mountain climb. (poor driver).i love watching movies about the trials and tribulations of mountain climbers. i gotta tell you, i'm 100% sure i'd die on the way to mountain climb. (poor driver).i love watching movies about the trials and tribulations of mountain climbers. i gotta tell you, i'm 100% sure i'd die on the way to mountain climb. (poor driver).</p>
+									</div>
+
+									<div class="right">
+										<div class="features">
+											<div class="feature">
+												<strong>cast:</strong> First Last, First Last,First Last
+											</div>
+											<div class="feature">
+												<strong>writing:</strong> First Last, First Last,First Last
+											</div>										
+											<div class="feature">
+												<strong>direction:</strong> First Last, First Last,First Last
+											</div>
+										</div>
+										<div class="features ratings">
+											<div class="feature critics">
+												<h5>critics: 74%</h5>
+												<div class="progress">
+												  <div class="bar" style="width: 74%;"></div>
+												</div>
+											</div>
+											<div class="feature audience">
+												<h5>audience: 74%</h5>
+												<div class="progress">
+												  <div class="bar" style="width: 74%;"></div>
+												</div>
+											</div>
+											<div class="clear"></div>											
+										</div>
+									</div>
+
+								</div>
+
+							</div>
+
 						</div>
-
-
 					</div>
 				</div>
 
