--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<link href='http://fonts.googleapis.com/css?family=Fjalla+One' rel='stylesheet' type='text/css'>
 
 	<!-- CSS -->
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
 	<link rel="stylesheet" type="text/css" href="css/main.css" />
 	<link rel="stylesheet" type="text/css" href="css/top_nav.css" />
 	<link rel="stylesheet" type="text/css" href="css/lineup_listing.css" />
